--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,6 @@ header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
 }
 
 header .logo {
@@ -53,8 +52,7 @@ header nav a:hover {
 
 .filme-principal {
   font-size: 16px;
-  color: #fff;
-  padding: 10px;
+  color: var(--branco);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%),
     url("../img/mWDdRXTivGE7aaY2vo1Ie0PfCX5.jpg");
   background-size: 100% 400px;
@@ -71,9 +69,56 @@ header nav a:hover {
 }
 
 .filme-principal .container {
-  width: 100%;
+  width: 80%;
 }
 
 .filme-principal .descricao {
   margin-bottom: 40px;
+  margin-top: 10px;
+  width: 60%;
+  text-align: justify;
+}
+
+.botao {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: var(--branco);
+  padding: 15px 30px;
+  margin-right: 15px;
+  border: 0.5px solid rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.botao:hover {
+  border-color: var(--branco);
+  background-color: var(--branco);
+  color: var(--preto);
+}
+
+.container {
+  margin-left: 20px;
+}
+
+.image-filme {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+@media screen and (max-width: 700px) {
+  header .container {
+    flex-direction: column;
+  }
+  .botao {
+    width: 150px;
+    margin-top: 5px;
+    height: 90px;
+  }
+
+  .filme-principal h3 {
+    font-size: 24px;
+  }
+  .filme-principal .descricao {
+    font-size: 14px;
+  }
 }
