--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -20,6 +20,7 @@
 /* General configurations */
 body {
   background-color: var(--preto);
+  color: var(--branco);
   font-family: "Roboto", sans-serif;
 }
 
@@ -103,6 +104,11 @@ header nav a:hover {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+.carrosel-filmes h3 {
+  font-size: 20px;
+  padding: 10px;
 }
 
 @media screen and (max-width: 700px) {
